@startuml module-context
title TUI Module Context
left to right direction
skinparam componentStyle rectangle

' Source evidence: modules/tui/pom.xml; Tui; JLineTerminal.
' Analyzed source commit: cc2f58d9e24bae1d7c99b9f54e86b71940d86115.
' Observed behavior: the TUI library is a leaf dependency consumed by coding-agent-cli.

component "JLine 3" as jline
component "Lanterna" as lanterna
component "Jackson databind" as jackson
component "campusclaw-tui" as tui
component "campusclaw-coding-agent" as cli

jline --> tui
lanterna --> tui
jackson --> tui
tui --> cli
@enduml

@startuml render-sequence
title TUI Render and Flush Sequence

' Source evidence: modules/tui/src/main/java/com/campusclaw/tui/Tui.java.
' Source evidence: modules/tui/src/main/java/com/campusclaw/tui/ansi/AnsiUtils.java.
' Observed behavior: Tui renders a full component frame and emits either a full or differential update.

participant Caller
participant Tui
participant Terminal
participant Container
participant AnsiUtils

Caller -> Tui : render()
Tui -> Terminal : getSize()
Terminal --> Tui : TerminalSize(width, height)
Tui -> Container : render(width)
Container --> Tui : newLines
alt first frame, resize, or shrink
  Tui -> Tui : fullRender(...)
  Tui -> AnsiUtils : sliceByColumn(...)
  AnsiUtils --> Tui : clipped line
  Tui -> Terminal : write full frame
else normal differential frame
  Tui -> Tui : computeChangeRange(...)
  Tui -> Tui : emitDiffFrame(...)
  Tui -> Terminal : write changed lines
end
@enduml

@startuml core-classes
title TUI Module Core Classes
skinparam classAttributeIconSize 0

' Source evidence: modules/tui/src/main/java/com/campusclaw/tui/.
' Design reason: show the component, terminal, and renderer extension points.

interface Component
interface Focusable
interface Terminal
class Tui
class Container
class Box
class Text
class Input
class Editor
class SelectList
class MarkdownComponent
class FuzzyMatcher
class AnsiUtils
class JLineTerminal
class TestTerminal

Container ..|> Component
Box ..|> Component
Text ..|> Component
Input ..|> Component
Input ..|> Focusable
Editor ..|> Component
Editor ..|> Focusable
SelectList ..|> Component
SelectList ..|> Focusable
MarkdownComponent ..|> Component
JLineTerminal ..|> Terminal
TestTerminal ..|> Terminal
Tui *-- Container
Tui --> Terminal : uses
Tui --> AnsiUtils : uses
Container o-- Component
Box *-- Component
Input --> FuzzyMatcher : optional
@enduml
